@@ -95,6 +95,7 @@ Release ...
   POSIX.
 * man: With the -k option, the exit status is now 0 if any matches have been
   found.
+* stty: If ispeed and ospeed are different, both are printed separately.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
